--- a/src/main/webapp/resources/css/manageMent.css
+++ b/src/main/webapp/resources/css/manageMent.css
@@ -7,16 +7,16 @@ body {
 
 .content-wrap {
 	display: flex;
-    align-items: center;
-    justify-content: center;
-    line-height: 30px;
-    margin-top: 50px;
-    text-align: center;
+	align-items: center;
+	justify-content: center;
+	line-height: 30px;
+	margin-top: 50px;
+	text-align: center;
 }
 
 .table {
 	width: 80%;
-    height: auto;
+	height: auto;
 }
 
 .table.table-bordered {
@@ -24,18 +24,103 @@ body {
 }
 
 tr td {
-	height : 50px;
-	line-height : 50px;
+	height: 50px;
+	line-height: 50px;
 }
 
 tr td img {
-	height : 50px;
-	width : auto;
+	height: 50px;
+	width: auto;
 }
 
 .table>:not(caption)>*>* {
-	padding:0;	
+	padding: 0;
 }
+
+.buttonStyle {
+	background: white;
+	border: 1px solid black;
+	height: 30px;
+	width: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: 20px;
+}
+
+.buttonStyle:hover {
+	background: black;
+	color: white;
+}
+
+.aTagWrap {
+	width: 100%;
+	text-align: center;
+	height: 200px;
+	margin-top: 100px;
+}
+
+.aTagStyle {
+	border: 1px solid black;
+	width: 60px;
+	height: 30px;
+	text-decoration: none;
+    color: black;
+}
+
+.aTagStyle:hover {
+	cursor: pointer;
+	background: black;
+	color: white;
+}
+
+
+
+#wrap{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: start;
+    position: relative;
+}
+.show{
+    transition: .3s ease;
+    opacity: 1;
+}
+
+.hide{
+    transition: .2s ease;
+    opacity: 0;
+}
+
+[href^="#"]{
+    /* href속성을 가진 태그 중 값이 #으로 시작하는 것 선택 */
+    width: 100px;
+    height: 150px;
+    display: block;
+    background-color: gray;
+    margin: 1rem;
+}
+
+[data-group]{
+    transition: .3s ease;
+    position: absolute;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
